feat: upgrade to Java 21 with compatibility improvements
- Added Java 21 support with backwards compatibility
- Enhanced reflection handling for Java module system
- Improved fallback mechanisms for document generation
- Updated runtime detection for newer JVMs
- Bumped version to 2.0.0